--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -9,10 +9,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.92
+    - name: Set up Python 3.9.4
       uses: actions/setup-python@v1
       with:
-        python-version: 3.92
+        python-version: 3.9.4 (x64)
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
