--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-discord
-datetime
-aiohttp
-pymongo
-config
-yfinance
-dnspython
-jishaku
-python-dotenv
-captcha
-flask
-discord_components
+discord==1.7.3
+aiohttp==3.8.1
+pymongo==4.0.1
+config==0.5.1
+yfinance==0.1.70
+dnspython==1.15.0
+jishaku==1.3.0
+python-dotenv==0.10.3
+captcha==0.1.0
+flask==1.1.1
+discord_components==1.0.0
